<fix> mrs-list list product name alignment

--- a/src/scss/mrs-lists/_mrs-lists.scss
+++ b/src/scss/mrs-lists/_mrs-lists.scss
@@ -260,6 +260,7 @@
 		}
 		.product-name{
 			padding: 0 10px;
+			text-align:left;
 		}
 		.product-thumb{
 			width: 110px;
